--- a/docs/intro.tex
+++ b/docs/intro.tex
@@ -154,7 +154,7 @@ To assign a points to a part problem you'd do
 Then to build all exercises that has the `difficult' and e.g. the `easy' tag one would use the \refCom{buildtags} command.
 \begin{dispListing}
   \makeset{myExerciseSet}{ohmsGeneralLaw}
-  \buildtags{dificult,easy}{ohmsGeneralLaw}
+  \buildtags{dificult,easy}{myExerciseSet}
 \end{dispListing}
 
 
