--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.1b85 - 2018/09/04
-%% The LaTeX package exercisebank - version v0.2.1 (2018/09/04) build 85
+%% exercisebank v0.2.1b86 - 2018/09/04
+%% The LaTeX package exercisebank - version v0.2.1 (2018/09/04) build 86
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -115,7 +115,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.1{\\[-0.5em]\footnotesize(build 85)}}}
+\title{{exercisebank - manual\\ v0.2.1{\\[-0.5em]\footnotesize(build 86)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -282,7 +282,7 @@ To assign a points to a part problem you'd do
 Then to build all exercises that has the `difficult' and e.g. the `easy' tag one would use the \refCom{buildtags} command.
 \begin{dispListing}
   \makeset{myExerciseSet}{ohmsGeneralLaw}
-  \buildtags{dificult,easy}{ohmsGeneralLaw}
+  \buildtags{dificult,easy}{myExerciseSet}
 \end{dispListing}
 
 
