--- a/exercises/secondexercise.tex
+++ b/exercises/secondexercise.tex
@@ -1,5 +1,5 @@
 %!TEX root = ../example.tex
-\nextproblem{tag=Intro}
+\nextproblem{hide}
 \begin{intro}
 	In this exercise, we'll be looking at \( \dots \)
 \end{intro}
