--- a/src/main.tex
+++ b/src/main.tex
@@ -47,8 +47,8 @@
 % }
 \ShowNumbers
 \begin{document}
-% \buildset{11}
-\buildtags{Y1}{11}
+\buildset{11}
+% \buildtags{Y1}{11}
 % \totalpoints
 % \sprite
 \end{document}
