--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -54,11 +54,12 @@
     \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
     \change{Fixed \dac{exec} so that it now can take paragraphs (made it \dac{long})}
     \change{Added point system}
+    \change{Fixed bug where vertical space would remain when intro environment hidden}
 \chlogtable
 
 
 % Testers and thanks
-\thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe} for help with testing and bug-reporting the current version (0.2.1)}
 \thankyou{\gh{tristelune1} -- \ghURL{tristelune1} for help with testing and bug-reporting the current version (0.2.1)}
+\thankyou{\gh{thorstengrothe} -- \ghURL{thorstengrothe} for help with testing and bug-reporting the current version (0.2.1)}
 % \tester{\gh{thorstengrothe}}
 % \tester{\gh{tristelune1}}
