--- a/src/helpers.tex
+++ b/src/helpers.tex
@@ -5,7 +5,7 @@
 \gdef\exb@int@isin#1#2#3#4{
  \def\needle{#1}
  \def\haystack{#2}
-\if\haystack\@empty\relax#4\else
+\ifx\haystack\empty\relax\@dlog{int:haystack empty}#4\else
  \def\isFalse{0}
  \let\isInList = \isFalse
  \IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric: `\needle' in `\haystack'!}{}\bye\stop}
@@ -46,7 +46,8 @@
   \xdef\haystack{#2}
   \def\whenfalse{#4}
   \def\whentrue{#3}
-  \@dlog{h:\haystack\space n:\needle}\if\haystack{}\relax#4\else
+  \@dlog{h:\haystack\space n:\needle}%
+  \ifx\haystack\empty\relax\@dlog{int:haystack empty}#4\else%
   \readlist*\items\haystack%
   \foreachitem\itm\in\items{
     \ifnum\pdfstrcmp{\needle}{\itm}=\z@\relax%
