--- a/src/packaging/packagehead.tex
+++ b/src/packaging/packagehead.tex
@@ -20,3 +20,4 @@
 %%
 \ProvidesPackage{exercisebank}[@@DATE @@VERSION Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
+\def\exercisebankversion{@@VERSION - Build @@BUILD}
