--- a/exercisebank.sty
+++ b/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exercisebank/
-%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/09/06) - build 88
+%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/09/07) - build 89
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,9 +13,9 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/09/06 v0.2.1-prerelease Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/09/07 v0.2.1-prerelease Creates a setup that gives freedom in making sets and exercises.]
 \xdef\exbank@quiet{1}
-\def\exercisebankversion{v0.2.1-prerelease - Build 88}
+\def\exercisebankversion{v0.2.1-prerelease - Build 89}
 \PackageWarningNoLine{exercisebank-v0.2.1-prerelease}{This package is in the beta stage, and if something unexpected happens please, oh pretty please, report it to https://github.com/Strauman/exercisebank. Thank you!}
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exercisebank}}
 }{}
@@ -98,7 +98,7 @@
 }
 }
 \def\exb@intersection@any#1#2#3#4{\edef\listarg{#1}
-\if\listarg\relax\else
+\ifx\listarg\relax\else
 \readlist*\needlelist{#1}
 \newif\ifexb@isintersection
   \foreachitem\needle\in\needlelist{    \exb@isin{\needle}{#2}{\exb@isintersectiontrue}{}
@@ -478,7 +478,8 @@ tag/.code={\pgfkeysalso{tags={#1}}}
 \ifexb@tagbuildmode
 \ifnum\pdfstrcmp{\DisplayProblem}{\T@}=\z@\relax
 \exb@intersection@any{\exb@currentTags}{\exb@tagList}{\global\exb@opthidesfalse}{\global\exb@opthidestrue}
-\fi\fi
+\fi
+\fi
 }
 \pgfkeys{ /makeset/.is family, /makeset,
  default/.style = {noheadarg=\isFalse, introarg=\isFalse},
@@ -656,8 +657,8 @@ tag/.code={\pgfkeysalso{tags={#1}}}
 \newcommand\buildtags[2]{%
   \global\exb@tagbuildmodetrue
   \xdef\csvtags{#1}%
+  \xdef\csvlist{#2}
 	\xdef\csvsets{#2}%
-	\readlist*\tagsItems\csvtags%
   \readlist*\setsItems\csvsets%
 	\foreachitem\set\in\setsItems{%
     \xdef\exb@tagList{\csvtags}
