--- a/src/main.tex
+++ b/src/main.tex
@@ -19,7 +19,7 @@
 % \makeset{11}{\exclude{secondexercise}{1,2}}
 % \makeset{11}{\select{secondexercise}{1,...,3}}
 % \makeset[intro]{11}{\select{secondexercise}{1,2}}
-\makeset{11}{secondexercise}
+\makeset{11}{firstexercise,secondexercise}
 
 % \makeset{11}{firstexercise}
 % \makeset[nohead,intro]{11}{%
@@ -45,9 +45,15 @@
 % \At\StartBuildset{
 % BEFORE THE SET
 % }
-\ShowNumbers
+% \ShowNumbers
 \begin{document}
-\buildset{11}
+% \buildset{11}
+\buildtags{Y}{11}
+% \def\eleven{11}
+% \readlist*\items\eleven
+% \foreachitem\itm\in\items{
+% \@dlog{\pdfstrcmp{\itm}{\eleven}}
+% }
 % \buildtags{Y1}{11}
 % \totalpoints
 % \sprite
