--- a/src/pointsystem.tex
+++ b/src/pointsystem.tex
@@ -33,6 +33,6 @@ disable points/.is if={exb@enablepoints}
 %:$problemKeys.=}
 %:-
 \nextproblem{points/.store in=\exb@currentPoints}
-\@dlog{\string\exbank@opt@partProblemHeader\meaning\exbank@opt@partProblemHeader}
+% \@dlog{\string\exbank@opt@partProblemHeader\meaning\exbank@opt@partProblemHeader}
 \At\BeginPartproblem{\addtocounter{exb@points}\exb@currentPoints}
 \At\EndPartproblem{\gdef\exb@currentPoints{0}}
