--- a/src/helpers.tex
+++ b/src/helpers.tex
@@ -3,30 +3,30 @@
 \edef\@isTrue{1}
 \edef\@isFalse{0}
 \gdef\exb@int@isin#1#2#3#4{
- \def\needle{#1}
- \def\haystack{#2}
-\ifx\haystack\empty\relax\@dlog{int:haystack empty}#4\else
- \def\isFalse{0}
- \let\isInList = \isFalse
- \IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric: `\needle' in `\haystack'!}{}\bye\stop}
- \IfInteger{\haystack}{
-  \ifnum\haystack=\needle\relax
-   #3
-  \else
-   #4
-  \fi
- }{
-  \foreach \pp in #2{
-    \ifnum\pp=\needle\relax%
-     \gdef\isInList{1}
-     #3
-    \fi
-   }
-  \if\isInList\isFalse
-   #4
-  \fi
- }
-\fi}
+	\def\needle{#1}
+	\def\haystack{#2}
+	\ifx\haystack\empty\relax#4\else
+		\def\isFalse{0}
+		\let\isInList = \isFalse
+		\IfInteger{\needle}{}{\@latex@error{ISIN: Can't look for part problem that is not numeric: `\needle' in `\haystack'!}{}\bye\stop}
+		\IfInteger{\haystack}{
+			\ifnum\haystack=\needle\relax
+				#3
+			\else
+				#4
+			\fi
+		}{
+			\foreach \pp in #2{
+					\ifnum\pp=\needle\relax%
+						\gdef\isInList{1}
+						#3
+					\fi
+				}
+			\if\isInList\isFalse
+				#4
+			\fi
+		}
+	\fi}
 \newif\ifexb@isInList
 \newcounter{exb@isin@dots}
 %:§ref
@@ -40,23 +40,23 @@
 % #2: needle
 % #3: action if found in list
 % #4: action if not found in list
-\gdef\exb@isin#1#2#3#4{
-  \global\exb@isInListfalse
-  \xdef\needle{#1}
-  \xdef\haystack{#2}
-  \def\whenfalse{#4}
-  \def\whentrue{#3}
-  \@dlog{h:\haystack\space n:\needle}%
-  \ifx\haystack\empty\relax\@dlog{int:haystack empty}#4\else%
-  \readlist*\items\haystack%
-  \foreachitem\itm\in\items{
-    \ifnum\pdfstrcmp{\needle}{\itm}=\z@\relax%
-  \global\exb@isInListtrue%
-  #3\fi
-  }
-  \ifexb@isInList\else%
-  #4
-  \fi\fi%
+\gdef\exb@isin#1#2#3#4{\@dinfo{running isin}
+	\global\exb@isInListfalse
+	\xdef\needle{#1}
+	\xdef\haystack{#2}
+	\def\whenfalse{#4}
+	\def\whentrue{#3}
+	% \@dlog{h:\haystack\space n:\needle}%
+	\ifx\haystack\empty\relax#4\else%
+		\readlist*\items\haystack%
+		\foreachitem\itm\in\items{
+			\ifnum\pdfstrcmp{\needle}{\itm}=\z@\relax%
+				\global\exb@isInListtrue%
+				#3\fi
+		}
+		\ifexb@isInList\else%
+			#4
+		\fi\fi%
 }
 
 %\strif: Compare two strings
@@ -66,7 +66,7 @@
 %FALSE
 %\fi
 \gdef\strif#1#2{%
- \ifnum\pdfstrcmp{#1}{#2}=\z@\relax%
+	\ifnum\pdfstrcmp{#1}{#2}=\z@\relax%
 }
 % Get macroname of macro
 \let\ea = \expandafter
@@ -75,37 +75,51 @@
 \gdef\exbank@macroname#1{\expandafter\removebs\string#1}
 \gdef\@noneofone#1{}
 \gdef\@noneoftwo#1#2{}
-
-\@ifundefined{exbank@quiet}{
- \global\let\@dlog\@latex@warning
+{\globaldefs=1\newcommand\@opt@gobble[2][]{}}
+\@ifundefined{exbank@verbose}{
+	\global\let\@dinfo\@gobble
+	\global\let\@dinfomode\@opt@gobble
+	\gdef\@@dinfomode{ALL}
 }{
- \global\let\@dlog\@noneofone
+	\bgroup
+	\gdef\@dinfomode#1{\gdef\@@dinfomode{#1}}
+  \gdef\@@dinfomode{ALL}
+	\globaldefs=1\newcommand\@dinfo[2][]{%
+			\@latex@warning{--INFO:#2}%
+		}%
+	\egroup%
+}
+\@ifundefined{exbank@quiet}{
+	\gdef\@dlog#1{\@latex@warning{::DEBUG:#1}}
+}{
+	\global\let\@dlog\@noneofone
 }
 
 \newcommand\ex@before[2]{
-\edef #1{\unexpanded{#2}\unexpanded\expandafter{#1}}
+	\edef #1{\unexpanded{#2}\unexpanded\expandafter{#1}}
 }
 % Put stuff at left margin
 % \exb@lmargin{content}{marginSize}
 \newcommand{\exb@lmargin}[2]{\strut\vadjust{\exb@domark{#1}{#2}}}
 
 \newcommand{\exb@domark}[2]{%
-  \hbox to #2{
-    \vbox to 0pt{
-      \kern-\dp\strutbox
-      \smash{\llap{#1}}
-      \vss
-    }%
-  }
+	\hbox to #2{
+		\vbox to 0pt{
+				\kern-\dp\strutbox
+				\smash{\llap{#1}}
+				\vss
+			}%
+	}
 }
 % TODO: FINISH
-\def\exb@intersection@any#1#2#3#4{
-\edef\listarg{#1}
-\ifx\listarg\relax\else
-\readlist*\needlelist{#1}
 \newif\ifexb@isintersection
-  \foreachitem\needle\in\needlelist{
-    \exb@isin{\needle}{#2}{\exb@isintersectiontrue}{}
-  }
-\ifexb@isintersection#3\else#4\fi\fi
+\def\exb@intersection@any#1#2#3#4{
+	\edef\listarg{#1}
+	\ifx\listarg\empty\@dlog{RELAX}\else
+	\readlist*\needlelist{#1}
+		\foreachitem\needle\in\needlelist{
+			\exb@isin{\needle}{#2}{\exb@isintersectiontrue}{}
+		}
+		\ifexb@isintersection#3\else#4\fi%
+		\fi
 }
